--- a/Mi-Pagina-Web/config.yml
+++ b/Mi-Pagina-Web/config.yml
@@ -1,5 +1,3 @@
 title: Mi Página Web
-description: Esta es una página web personal creada con GitHub Pages y Jekyll.
-baseurl: ""
-url: "https://tu-usuario.github.io"
+description: Esta es mi página web personal 
 theme: minima
